@@ -660,34 +660,45 @@ DCS_SOUNDROM7x("rs_u2_s.l1",CRC(5a2db20c) SHA1(34ce236cc874b820db2d2268cc77815ed
                "rs_u8_s.l1",CRC(c70f2210) SHA1(9be9f271d81d15a4eb123f1377b0c077eef97774))
 WPC_ROMEND
 
+WPC_ROMSTART(rs,lx2p3,"rshw_lx2.rom",0x80000,CRC(317210d0) SHA1(38adcf9c72552bd371b096080b172c63d0f843d3))
+DCS_SOUNDROM7x("rs_u2_s.p3",CRC(3a987553) SHA1(bb174cc48533e19906b5ef9d099670e03a04cc89),
+               "rs_u3_s.l1",CRC(719be036) SHA1(fa975a6a93fcaefddcbd1c0b97c49bd9f9608ad4),
+               "rs_u4_s.l1",CRC(d452d007) SHA1(b850bc8e17d8940f93c1e7b6a0ab786b092694b3),
+               "rs_u5_s.l1",CRC(1faa04c9) SHA1(817bbd7fc0781d84af6c40cb477adf83cef07ab2),
+               "rs_u6_s.l1",CRC(eee00add) SHA1(96d664ca73ac896e918d7011c1cda3e55e3731b7),
+               "rs_u7_s.l1",CRC(3a222a54) SHA1(2a788e4ac573bf1d128e5bef9357e62c805014b9),
+               "rs_u8_s.l1",CRC(c70f2210) SHA1(9be9f271d81d15a4eb123f1377b0c077eef97774))
+WPC_ROMEND
+
 /*--------------
 /  Game drivers
 /---------------*/
-CORE_GAMEDEF(rs,l6,"Red and Ted's Road Show (L-6)",1994,"Williams",wpc_mSecurityS,0)
-CORE_CLONEDEF(rs,la5,l6,"Red and Ted's Road Show (LA-5)",1994,"Williams",wpc_mSecurityS,0)
-CORE_CLONEDEF(rs,da5,l6,"Red and Ted's Road Show (DA-5 LED Ghost Fix)",1994,"Williams",wpc_mSecurityS,0)
-CORE_CLONEDEF(rs,lx5,l6,"Red and Ted's Road Show (LX-5)",1994,"Williams",wpc_mSecurityS,0)
-CORE_CLONEDEF(rs,dx5,l6,"Red and Ted's Road Show (DX-5 LED Ghost Fix)",1994,"Williams",wpc_mSecurityS,0)
-CORE_CLONEDEF(rs,la4,l6,"Red and Ted's Road Show (LA-4)",1994,"Williams",wpc_mSecurityS,0)
-CORE_CLONEDEF(rs,da4,l6,"Red and Ted's Road Show (DA-4 LED Ghost Fix)",1994,"Williams",wpc_mSecurityS,0)
-CORE_CLONEDEF(rs,lx4,l6,"Red and Ted's Road Show (LX-4)",1994,"Williams",wpc_mSecurityS,0)
-CORE_CLONEDEF(rs,dx4,l6,"Red and Ted's Road Show (DX-4 LED Ghost Fix)",1994,"Williams",wpc_mSecurityS,0)
-CORE_CLONEDEF(rs,lx3,l6,"Red and Ted's Road Show (LX-3)",1994,"Williams",wpc_mSecurityS,0)
-CORE_CLONEDEF(rs,dx3,l6,"Red and Ted's Road Show (DX-3 LED Ghost Fix)",1994,"Williams",wpc_mSecurityS,0)
-CORE_CLONEDEF(rs,lx2,l6,"Red and Ted's Road Show (LX-2)",1994,"Williams",wpc_mSecurityS,0)
-CORE_CLONEDEF(rs,dx2,l6,"Red and Ted's Road Show (DX-2 LED Ghost Fix)",1994,"Williams",wpc_mSecurityS,0)
+CORE_GAMEDEF(rs,l6,       "Red and Ted's Road Show (L-6)",1994,"Williams",wpc_mSecurityS,0)
+CORE_CLONEDEF(rs,la5,l6,  "Red and Ted's Road Show (LA-5)",1994,"Williams",wpc_mSecurityS,0)
+CORE_CLONEDEF(rs,da5,l6,  "Red and Ted's Road Show (DA-5 LED Ghost Fix)",1994,"Williams",wpc_mSecurityS,0)
+CORE_CLONEDEF(rs,lx5,l6,  "Red and Ted's Road Show (LX-5)",1994,"Williams",wpc_mSecurityS,0)
+CORE_CLONEDEF(rs,dx5,l6,  "Red and Ted's Road Show (DX-5 LED Ghost Fix)",1994,"Williams",wpc_mSecurityS,0)
+CORE_CLONEDEF(rs,la4,l6,  "Red and Ted's Road Show (LA-4)",1994,"Williams",wpc_mSecurityS,0)
+CORE_CLONEDEF(rs,da4,l6,  "Red and Ted's Road Show (DA-4 LED Ghost Fix)",1994,"Williams",wpc_mSecurityS,0)
+CORE_CLONEDEF(rs,lx4,l6,  "Red and Ted's Road Show (LX-4)",1994,"Williams",wpc_mSecurityS,0)
+CORE_CLONEDEF(rs,dx4,l6,  "Red and Ted's Road Show (DX-4 LED Ghost Fix)",1994,"Williams",wpc_mSecurityS,0)
+CORE_CLONEDEF(rs,lx3,l6,  "Red and Ted's Road Show (LX-3)",1994,"Williams",wpc_mSecurityS,0)
+CORE_CLONEDEF(rs,dx3,l6,  "Red and Ted's Road Show (DX-3 LED Ghost Fix)",1994,"Williams",wpc_mSecurityS,0)
+CORE_CLONEDEF(rs,lx2,l6,  "Red and Ted's Road Show (LX-2)",1994,"Williams",wpc_mSecurityS,0)
+CORE_CLONEDEF(rs,dx2,l6,  "Red and Ted's Road Show (DX-2 LED Ghost Fix)",1994,"Williams",wpc_mSecurityS,0)
+CORE_CLONEDEF(rs,lx2p3,l6,"Red and Ted's Road Show (LX-2, Prototype Sound P-3)",1994,"Williams",wpc_mSecurityS,0) //!! only sound, no proto game rom(s) so far
 
 /*-----------------------
 / Simulation Definitions
 /-----------------------*/
 static sim_tSimData rsSimData = {
   2,    				/* 2 game specific input ports */
-  rs_stateDef,				/* Definition of all states */
-  rs_inportData,			/* Keyboard Entries */
+  rs_stateDef,			/* Definition of all states */
+  rs_inportData,		/* Keyboard Entries */
   { stTrough1, stTrough2, stTrough3, stTrough4, stDrain, stDrain, stDrain },	/*Position where balls start.. Max 7 Balls Allowed*/
   NULL, 				/* no init */
-  rs_handleBallState,			/*Function to handle ball state changes*/
-  rs_drawStatic,			/*Function to handle mechanical state changes*/
+  rs_handleBallState,	/* Function to handle ball state changes */
+  rs_drawStatic,		/* Function to handle mechanical state changes */
   TRUE, 				/* Simulate manual shooter? */
   NULL  				/* Custom key conditions? */
 };
